Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85713

Inline components trigger assertion with ListElement

    XMLWordPrintable

Details

    • 2425cd478138c52694aaa20b7f7eb4a91d97b51c (qt/qtdeclarative/dev) 5652923d99166e942385eb35b778d26b55ab4b0a (qt/qtdeclarative/5.15) cdfb593985496f70b33e295f35b84c8dcf494cc2 (qt/qtdeclarative/5.15.2)

    Description

      The following code triggers an assertion:

      import QtQuick.Window 2.2
      import QtQuick 2.15
      Window {
          id: app
          width: 400
          height: 600
          visible: true
          component GlyphView : Item {
              ListModel {
                  id: glyphModel
                  ListElement {
                      unicode: "\u03A8"
                  }
              }
          }
         GlyphView {
             anchors.fill: parent
         }
      }
      

      This might be related to the fact that ListElement requires a custom parser.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes