tests/auto/qml/qqmllanguage/tst_qqmllanguage.cpp
@@ -113,6 +113,7 @@ private slots:
     void bindJSValueToType();
     void bindTypeToJSValue();
     void customParserTypes();
+    void customParserTypeInInlineComponent();
     void rootAsQmlComponent();
     void rootItemIsComponent();
     void inlineQmlComponents();
@@ -1285,6 +1286,16 @@ void tst_qqmllanguage::customParserTypes()
     QScopedPointer<QObject> object(component.create());
     QVERIFY(object != nullptr);
     QCOMPARE(object->property("count"), QVariant(2));
+}
+
+// Tests that custom pursor types can be instantiated in ICs
+void tst_qqmllanguage::customParserTypeInInlineComponent()
+{
+    QQmlComponent component(&engine, testFileUrl("customParserTypeInIC.qml"));
+    VERIFY_ERRORS(0);
+    QScopedPointer<QObject> object(component.create());
+    QVERIFY(object != nullptr);
+    QCOMPARE(object->property("count"), 2);
 }
 
 // Tests that the root item can be a custom component
